<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/nom_assig"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/a1"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textAlignment="center"
        android:layout_marginTop="8dp">

    </TextView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:orientation="vertical"
        android:layout_margin="3dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:text="@string/profesor"
            android:textSize="20sp"
            android:textStyle="bold">

        </TextView>
        <TextView
            android:id="@+id/profesor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp">

        </TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="25dp"

            android:text="@string/desc"
            android:textSize="20sp"
            android:textStyle="bold">

        </TextView>
        <TextView
            android:id="@+id/detalle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp">

        </TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:text="@string/cred"
            android:textSize="20sp"
            android:textStyle="bold">

        </TextView>
        <TextView
            android:id="@+id/creditos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp">

        </TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:text="@string/tiene_becarios"
            android:textSize="20sp"
            android:textStyle="bold">

        </TextView>
        <TextView
            android:id="@+id/becarios"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp">

        </TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:text="@string/aulas"
            android:textSize="20sp"
            android:textStyle="bold">

        </TextView>
        <TextView
            android:id="@+id/aula"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp">

        </TextView>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7">

    </LinearLayout>



</LinearLayout>