<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="4" >

    <LinearLayout
        android:id="@+id/b_a1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1"
        android:weightSum="2"
        android:layout_margin="3dp"
        android:background="@drawable/border"
        android:clickable="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:textStyle="bold"
                android:text="@string/a1"
                android:textSize="15sp"
                android:gravity="center_vertical">
            </TextView>
            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:src="@mipmap/logo1">

            </ImageView>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.7"
            android:text="@string/d1"
            android:textSize="12sp"
            android:justificationMode="inter_word">

        </TextView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/b_a2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1"
        android:weightSum="2"
        android:layout_margin="3dp"
        android:background="@drawable/border"
        android:clickable="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:textStyle="bold"
                android:text="@string/a2"
                android:textSize="15sp"
                android:gravity="center_vertical">
            </TextView>
            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:src="@mipmap/logo1">

            </ImageView>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.7"
            android:text="@string/a2_maindetail"
            android:textSize="12sp"
            android:justificationMode="inter_word">

        </TextView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/b_a3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_margin="3dp"
        android:background="@drawable/border"
        android:clickable="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:textStyle="bold"
                android:text="@string/a3"
                android:textSize="15sp"
                android:gravity="center_vertical">
            </TextView>
            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:src="@mipmap/logo1">

            </ImageView>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"

            android:layout_height="0dp"
            android:layout_weight="1.7"
            android:text="@string/a3_maindetail"
            android:textSize="12sp"
            android:justificationMode="inter_word">

        </TextView>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/b_a4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_margin="3dp"
        android:background="@drawable/border"
        android:clickable="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:textStyle="bold"
                android:text="@string/a4"
                android:textSize="15sp"
                android:gravity="center_vertical">
            </TextView>
            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:src="@mipmap/logo1">

            </ImageView>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.7"
            android:text="@string/a4_maindetail"
            android:textSize="12sp"
            android:justificationMode="inter_word">

        </TextView>

    </LinearLayout>

</LinearLayout>